--- a/res/drawable/ic_updateui_delete.xml
+++ b/res/drawable/ic_updateui_delete.xml
@@ -2,11 +2,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:tint="@color/theme_accent"
+    android:tint="?android:attr/colorPrimary"
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
-        android:fillColor="@color/theme_accent"
+        android:fillColor="?android:attr/colorPrimary"
         android:pathData="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z" />
 </vector>
 
