--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -5,7 +5,7 @@
         <item name="colorPrimary">@color/theme_primary</item>
         <item name="colorPrimaryDark">@color/theme_primary_dark</item>
         <item name="colorAccent">@color/theme_accent</item>
-        <item name="colorControlNormal">@color/theme_accent</item>
+        <item name="colorControlNormal">@color/text_primary</item>
         <item name="android:windowLightStatusBar">@bool/theme_is_light</item>
         <item name="android:windowLightNavigationBar">@bool/theme_is_light</item>
     </style>
@@ -31,11 +31,11 @@
 
     <style name="ToolbarTitle" parent="android:TextAppearance.Material.Title">
         <item name="android:fontFamily">@string/defaultFontFamilyMedium</item>
-        <item name="android:textColor">@color/theme_accent</item>
+        <item name="android:textColor">@color/text_primary</item>
     </style>
 
     <style name="AppTheme.AlertDialogStyle" parent="android:Theme.DeviceDefault.Light.Dialog.Alert">
-        <item name="android:colorAccent">@color/google_blue</item>
+        <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
         <item name="android:buttonBarButtonStyle">@style/AlertDialogButtonStyle</item>
         <item name="android:textColor">@color/text_primary</item>
         <item name="android:textColorPrimary">@color/text_primary</item>
@@ -46,7 +46,7 @@
     </style>
 
     <style name="AlertDialogButtonStyle" parent="android:Widget.DeviceDefault.Button.Borderless.Colored">
-        <item name="android:textColor">@color/google_blue</item>
+        <item name="android:textColor">@*android:color/accent_device_default_dark</item>
         <item name="android:minWidth">64dp</item>
         <item name="android:minHeight">48dip</item>
     </style>
